--- a/templates/002.j2
+++ b/templates/002.j2
@@ -5,5 +5,5 @@
 --backup-how=hot \
 --backup-type=custom \
 --snapshot=doquiesce \
---backup-vms="awx,unifi,confluence,download,nut,blueiris!milestone.vmdk" \
+--backup-vms="awx,unifi,confluence,download,nut" \
 --exec=yes >> {{ xsibackup_working_dir }}/xsibackup/var/logs/cron.log
